picking the most likely sentence

--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -26,6 +26,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.2 挑选概率最高的句子 Picking the most likely sentence\n",
+    "\n",
+    "序列到序列的机器翻译模型，和语言模型，有一定相同的地方，它们都需要挑选概率最高的句子。但二者之间也存在一些显著的不同。\n",
+    "\n",
+    "序列到序列的机器翻译模型，可以看做条件概率下的语言模型：\n",
+    "![Machine translation as building a conditional language model.png](img/Machine translation as building a conditional language model.png)\n",
+    "\n",
+    "有了这个条件概率的语言模型，它可以生成不同的翻译，并且判定各个翻译的概率。但对于机器翻译问题，我们不需要随机生成的句子，而是需要找到概率最大的句子：\n",
+    "![Finding the most likely translation.png](img/Finding the most likely translation.png)\n",
+    "\n",
+    "使用贪心算法，每一步找到最大概率的下一个词，可能导致无法找到全局最大值；而穷举搜索是不现实的，计算量太大：\n",
+    "![Why not a greedy search.png](img/Why not a greedy search.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
