--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -46,6 +46,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 定向搜索 Beam Search\n",
+    "\n",
+    "定向搜索不一定保证能找到全局最优解，但通常能达到不错的效果。\n",
+    "\n",
+    "第一步：预先设定好**定向宽度 beam width**的参数B，计算encoder部分的值 $x$，根据 $x$ 就可以计算 $P(y^{<1>}|x)$ 的值。取条件概率最大的B个词，并保存其对应的条件概率。\n",
+    "\n",
+    "![Beam search algorithm 1.png](img/Beam search algorithm 1.png)\n",
+    "\n",
+    "第二步：将上一步选出的B个词，分别作为 $y^{<1>}$，将词典中所有的词作为 $y^{<2>}$，计算 $P(y^{<1>},y^{<2>}|x) = P(y^{<1>}|x)P(y^{<2>}|x, y^{<1>})$。这样假设词典中有10000个词，就可以获得 10000×B 组 $y^{<1>}，y^{<1>}$ 的组合。再一次从中挑选出概率最大的B个 $y^{<1>}，y^{<1>}$ 组合。\n",
+    "\n",
+    "![Beam search algorithm 2.png](img/Beam search algorithm 2.png)\n",
+    "\n",
+    "第三步：类似上一步。继续重复上面的步骤，知道句子结束。注意当 $B=1$ 时，定向搜索就是贪心搜索。\n",
+    "\n",
+    "![Beam search algorithm 3.png](img/Beam search algorithm 3.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
