Refinements to Beam Search

--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -67,6 +67,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 改进定向搜索 Refinements to Beam Search\n",
+    "\n",
+    "长度归一化：多个概率值相乘，可能导致堆栈下溢，丢失精度。转为求对数的最大值。然后求平均，从而对长度进行归一，否则之前的优化目标会对长句子有过多的惩罚。\n",
+    "\n",
+    "![Length normalization.png](img/Length normalization.png)\n",
+    "\n",
+    "![Beam search discussion.png](img/Beam search discussion.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
