Error analysis in beam search

--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -80,6 +80,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.5 定向搜索的误差分析 Error analysis in beam search\n",
+    "\n",
+    "误差分析，定向搜索出来的结果不好，应该归因为定向搜索，还是归因为RNN模型。\n",
+    "\n",
+    "![Error analysis beam search.png](img/Error analysis beam search.png)\n",
+    "\n",
+    "![Error analysis on beam search.png](img/Error analysis on beam search.png)\n",
+    "\n",
+    "从训练集中找出所有翻译错误，和人工翻译进行比较。判定定向搜索和RNN模型各自对造成最终误差的占比。如果是RNN，可以再进一步分析，是增加正则化，获取更多数据，还是更换神经网络的架构。\n",
+    "\n",
+    "![Error analysis process.png](img/Error analysis process.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -90,6 +109,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
