--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -99,6 +99,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.6 BLEU评分\n",
+    "\n",
+    "[BLEU: a Method for Automatic Evaluation of Machine Translation](http://www.aclweb.org/anthology/P02-1040)\n",
+    "\n",
+    "正确的翻译可能有很多种，要在多个正确的翻译之间取舍，就需要一个评分机制。\n",
+    "\n",
+    "![Bleu score on unigrams.png](img/Bleu score on unigrams.png)\n",
+    "\n",
+    "![Bleu details.png](img/Bleu details.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
