Attention model intuition

--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -116,6 +116,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.7 注意力模型的直观理解 Attention model intuition\n",
+    "\n",
+    "目前介绍的机器翻译模型，是编码解码架构，编码和解码分别训练两个不同的RNN，整个句子通过编码RNN输出一个预测值，然后根据这个预测值，解码RNN将其翻译出来。而实际上人类在进行翻译的时候，尤其对于长句子，不会整个看完之后再开始翻译。因为这种传统架构，随着句子变长，其Bleu评分会缓缓下降。\n",
+    "\n",
+    "![The problem of long sequences.png](img/The problem of long sequences.png)\n",
+    "\n",
+    "[NEURAL MACHINE TRANSLATION BY JOINTLY LEARNING TO ALIGN AND TRANSLATE](https://arxiv.org/pdf/1409.0473.pdf)\n",
+    "\n",
+    "![Attention model intuition.png](img/Attention model intuition.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
