--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -133,6 +133,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.8 注意力模型 Attention model\n",
+    "\n",
+    "![Attention model.png](img/Attention model.png)\n",
+    "\n",
+    "![Computing attention.png](img/Computing attention.png)\n",
+    "\n",
+    "![Attention examples.png](img/Attention examples.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
