--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -146,6 +146,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 语音数据 Audio Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 语音识别 Speech Recognition\n",
+    "\n",
+    "![Speech recognition problem.png](img/Speech recognition problem.png)\n",
+    "\n",
+    "![Attention model for speech recognition.png](img/Attention model for speech recognition.png)\n",
+    "\n",
+    "![CTC cost for speech recognition.png](img/CTC cost for speech recognition.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
