Trigger Word Detection

--- a/Sequence models & Attention mechanism.ipynb
+++ b/Sequence models & Attention mechanism.ipynb
@@ -166,6 +166,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 触发字检测 Trigger Word Detection\n",
+    "\n",
+    "![What is trigger word detection.png](img/What is trigger word detection.png)\n",
+    "\n",
+    "![Trigger word detection algorithm.png](img/Trigger word detection algorithm.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
